<resources>
    <string name="app_name">FarmBnB</string>
    <string name="welcome_message">Welcome to FarmBnB</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

    <string name="age_text">Please confirm your age</string>
    <string name="age">0</string>
    <string name="welcome_greeting">Hi there!!</string>
    <string name="welcome_greeting3">The place to rent the most affordable homes away from home</string>
    <string name="title_activity_admin">Admin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="admin_log_in">Log In</string>
    <string name="admin_password">Password</string>
    <string name="admin_username">Username</string>
    <string name="text2">Login Now</string>
    <string name="text3">Please login to continue</string>
    <string name="main_sign_up">Sign Up</string>
    <string name="main_admin">Admin</string>
    <string name="main_text">Your firstname is your username</string>


</resources>